--- a/notebooks/Kaylan/docs/project_proposal.tex
+++ b/notebooks/Kaylan/docs/project_proposal.tex
@@ -18,7 +18,7 @@
 \title{Gesture Based Turn Signaling System Proposal}
 
 \author{Sultan Alnuaimi, Edan Elazar and Kaylan Wang\\
-\small \{saltana2, eelazar2, kaylanw2\}@illinois.edu\\
+\small \{saltana2, eelazar, kaylanw2\}@illinois.edu\\
 \small University of Illinois Urbana-Champaign, ECE 445\\
 \small TA: Sanjana Pingali}
 \maketitle
