--- a/notebooks/Kaylan/docs/project_proposal.tex
+++ b/notebooks/Kaylan/docs/project_proposal.tex
@@ -72,7 +72,7 @@ signal to the LEDs to display on the back and arms of the wearable.
 \begin{enumerate}
     \item The device should be able to last at least 1 hour on a full battery.
     \item The device should correctly detect and interpret specific arm 
-    gestures with a signal recognition accuracy of 90%. 
+    gestures with a signal recognition accuracy of 90\%. 
     \item The LEDs should be visible from a distance of at least 
     250 feet in low light conditions to ensure that they are clearly visible at both day and night. 
 \end{enumerate}
@@ -122,7 +122,7 @@ sensor subsystem and use the ESP32 microcontroller to analyze
 it in order to route the 5V from the battery to power the LEDs. 
 
 \textbf{Requirements:} The LEDs should light up according to the signals within 1 second.
-Should also correctly identify the arm gestures with an accuracy of 90%
+Should also correctly identify the arm gestures with an accuracy of 90\%
 
 \subsubsection{Power Subsystem:} 
 The Power subsystem should be able to output 5V through the control unit to power the LEDs, as well as output 3.3V to power the Control and Sensors subsystems. 
