--- a/notebooks/Kaylan/docs/proposal/project_proposal.tex
+++ b/notebooks/Kaylan/docs/proposal/project_proposal.tex
@@ -3,7 +3,7 @@
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{array}
-\usepackage{graphicx}% use this package if an eps figure is included.
+\usepackage{graphicx}
 \usepackage{mathrsfs}
 \usepackage{multirow}
 \usepackage{siunitx}
@@ -16,18 +16,24 @@
 \setlength\parskip{10pt} \setlength\parindent{2em}
 
 \begin{document}
-\title{Gesture Based Turn Signaling System Proposal}
 
-\author{Sultan Alnuaimi, Edan Elazar and Kaylan Wang\\
-\small \{saltana2, eelazar, kaylanw2\}@illinois.edu\\
-\small University of Illinois Urbana-Champaign, ECE 445\\
-\small TA: Sanjana Pingali}
-\maketitle
+\begin{titlepage}
+\centering
+\vspace*{\stretch{0.2}}
+{\LARGE\textbf{Gesture Based Turn Signaling System }}\\[1cm] 
+{\large\textbf{ECE 445 Proposal Spring 2024}}\\[0.3cm]
+\rule{\textwidth}{1pt}\\
+\vspace*{\stretch{2}}
+{\Large Sultan Alnuaimi, Edan Elazar and Kaylan Wang}\\[0.5cm] 
+{\small \{saltana2, eelazar, kaylanw2\}@illinois.edu}\\[0.5cm] 
+{\small Professor: Viktor Gruev}\\[0.5cm]
+{\small TA: Sanjana Pingali}\\[1cm]
 
-% \begin{abstract}
-% A temperature wave propagates along a long thin bar of a metallic sample when subjected to periodic heating. In this way it is demonstrated that there is no wave nature in these improperly called thermal waves by showing that they do not transport energy and its propagation properties can be used to determine the thermal diffusivity of the material.
-% \end{abstract}
+\vspace*{\stretch{2}}
+\end{titlepage} 
 
+\tableofcontents 
+\newpage
 \section{Introduction}
 \subsection{Problem}
 Cyclists, skateboarders, and scooter riders often face 
@@ -61,7 +67,7 @@ the data from the IMU, determining what kind of movement has been
 made. Then, depending on the movement, it will output a specific 
 signal to the LEDs to display on the back and arms of the wearable. 
 
-
+\newpage
 \subsection{Visual Aid}
 \begin{figure}[ht]
     \centering
@@ -85,9 +91,6 @@ signal to the LEDs to display on the back and arms of the wearable.
     250 feet in daylight conditions (ex. clear skies at noon) to ensure that they are clearly visible at both day and night. 
 
 \end{enumerate}
-
-
-
 
 \newpage
 \section{Design}
@@ -209,7 +212,43 @@ The LED subsystem should be able to turn on the LEDs when powered by a 5V input 
 \end{itemize}
 
 \subsection{Tolerance Analysis}
-TODO
+We will be using several components operating at 3.3V and a 5V 
+battery that allows recharging. Therefore we need to use a 
+voltage regulator to step down the voltage for the sensors 
+and the ESP32. 
+
+\noindent ESP32 worst case current draw: 240 mA
+
+\noindent 2 IMUs, current draw for each: 4.6 mA
+\begin{align*}
+    \text{Input power} &= V_{\text{in}} \times I_{\text{load}} = 5V \times (0.24A + 2 \times 4.6mA) \\
+    \text{Output power} &= V_{\text{out}} \times I_{\text{load}} = 3.3V \times (240mA + 2 \times 4.6mA) \\
+    \text{Power dissipated} &= P_{\text{in}} - P_{\text{out}} \quad (\text{worst case}) \\
+    \text{Temp Rise} &= P_{\text{diss}} \times R_{\text{th}} = 19.9 \, ^{\circ}C \\
+    \text{Estimated total temp} &= 25 + 19.9 = 44.9 \, ^{\circ}C
+\end{align*}
+
+\noindent The temperature rise is well within the operating range of the voltage regulator, so we can use it for our design.
+
+
+\noindent Additionally we need to make sure we aren’t 
+overloading the battery which can cause overheating. We will 
+need to be careful to not cause the battery or the voltage 
+regulator to overheat. Overheating would run the risk of 
+damaging the rider, as well as affecting the rest of the parts 
+negatively.
+
+\noindent LEDs current: \( 2A \) total 
+
+\noindent ESP32 and IMUs: \( 240mA + 2 \times 4.6mA \)
+\begin{align*}
+\text{Battery Efficiency} &= 90\% \\
+P_{\text{total}} &= V \times I = 5(2A + 240mA + 2 \times 4.6mA) = 11.246W \\
+P_{\text{loss}} &= \frac{P_{\text{total}}}{\text{Efficiency}} - P_{\text{total}} = 11.246W - 11.246W = 1.25W \\
+R_{\text{th}} &= 20 \, ^{\circ}C/W \\
+\text{Temp rise} &= P_{\text{loss}} \times R_{\text{th}} = 25 \, ^{\circ}C \\
+\text{Total temp} &= 25 + 25 = 50 \, ^{\circ}C
+\end{align*}
 
 \section{Ethics and Safety}
 \subsection{Ethical Considerations}
@@ -218,27 +257,27 @@ this project is with regard to the safety of the user and
 those on the road around the user. Under the IEEE code of 
 ethics, we are required to prioritize the safety of the 
 safety of the public \cite{IEEEethics2024}. If the wearable isn’t user
- friendly enough, or restricts any movements, this can lead 
- to potentially catastrophic accidents. We can solve this by 
- integrating the electronics out of the way of the user, 
- such as in the inner pockets of the jacket (for the PCB 
- and battery), and providing ample slack in the wires 
- throughout. This will allow the user to move more naturally.
-  Another concern might be the privacy of the user \cite{IEEEethics2024}
-   because we will be collecting and processing data constantly 
-   during a ride/commute. We can limit the data collection to 
-   IMU data, so that nothing personally identifiable is
-    collected, as well as deleting any data past a certain 
-    period of time. 
+friendly enough, or restricts any movements, this can lead 
+to potentially catastrophic accidents. We can solve this by 
+integrating the electronics out of the way of the user, 
+such as in the inner pockets of the jacket (for the PCB 
+and battery), and providing ample slack in the wires 
+throughout. This will allow the user to move more naturally.
+Another concern might be the privacy of the user \cite{IEEEethics2024}
+because we will be collecting and processing data constantly 
+during a ride/commute. We can limit the data collection to 
+IMU data, so that nothing personally identifiable is
+collected, as well as deleting any data past a certain 
+period of time. 
 
 
 
 
 \subsection{Safety Considerations}
-TODO
+We have to consider the brightness of the LEDs, and if they can be distracting to other drivers and pedestrians. Having bright LEDs can be beneficial for low light or adverse conditions, but can also be harmful if they dazzle other drivers, impairing their vision. There aren’t any safety regulatory requirements for LEDs for bicycles relating to the brightness of the lights, so we make sure we are following the vehicle regulations for turn signals. \cite{CFR571_108} There are also consumer product safety standards that we need to follow for wearable technology, such as those related to electronics devices and battery safety.
 
-\cite{CFR571_108}
 
+\newpage
 \bibliography{references}
 
 
